Joda-Time version 2.8
---------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This release contains enhancements, bug fixes and a time zone update.
The release runs on JDK 5 or later.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

**  Please also check out our related projects   **
** http://www.joda.org/joda-time/related.html **


Enhancements since 2.7
----------------------
- Encode properties files using unicode escapes [#228]
  The properties files are supposed to be loaded using ISO 8859-1 but Android seems to have issues with that.
  Re-encode the files using unicode escapes to sidestep the issue.


Compatibility with 2.7
----------------------
Build system - Yes

Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes
 - DateTimeZone data still at version 2014j

Semantic compatible - Yes


Deprecations since 2.7
----------------------


Bug fixes since 2.7
-------------------
- Fix MonthDay.plusDays() [#227]
  The algorithm was incorrect when adding enough days to cause the month to change twice.


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-time/

Feedback is also welcomed via the joda-interest mailing list.

The Joda team
http://www.joda.org/joda-time/